--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@
 <nav>
 <a href="/">Home</a>
 <a href="/plans/">Plans</a>
-<a href="/about/">About Us</a>
+<a href="/about/" class="active">About Us</a>
 <a href="/support/">Support</a>
 </nav>
 
@@ -22,15 +22,6 @@
 <p>NovaStrike builds powerful Discord bots and professional websites for our clients.</p>
 </div>
 
-<script>
-// Highlight active nav
-document.querySelectorAll("nav a").forEach(link=>{
-  if(link.href === window.location.href){
-    link.style.color="#ff0000";
-    link.style.textShadow="0 0 10px red";
-  }
-});
-</script>
-
+<footer>© 2026 NovaStrike</footer>
 </body>
 </html>
