--- a/plans/index.html
+++ b/plans/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>NovaStrike - Plans</title>
-<link rel="stylesheet" href="/assets/style.css">
+<link rel="icon" type="image/png" href="/assets/logo.png">
+<link rel="stylesheet" href="/style.css">
 </head>
 <body>
+
+<header>
+    <div class="logo"><img src="/assets/logo.png" alt="NovaStrike"></div>
+</header>
 
 <nav>
 <a href="/">Home</a>
@@ -14,24 +20,16 @@
 <a href="/support/">Support</a>
 </nav>
 
-<div class="hero">
-<h1>Our Plans</h1>
-</div>
+<main>
+<div class="hero"><h1>Our Plans</h1></div>
 
 <div class="card">
-<button data-plan="Starter">Starter Plan</button>
-<button data-plan="Pro">Pro Plan</button>
-<button data-plan="Enterprise">Enterprise Plan</button>
+<button data-page="/plans/">Starter Plan</button>
+<button data-page="/plans/">Pro Plan</button>
+<button data-page="/plans/">Enterprise Plan</button>
 </div>
 
 <footer>© 2026 NovaStrike</footer>
-
-<script>
-// Button click alerts
-document.querySelectorAll("button[data-plan]").forEach(btn=>{
-    btn.addEventListener("click",()=>alert("NovaStrike order created for: "+btn.getAttribute("data-plan")));
-});
-</script>
-
+<script src="/script.js"></script>
 </body>
 </html>
