--- a/about/index.html
+++ b/about/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>NovaStrike - About Us</title>
-<link rel="stylesheet" href="/assets/style.css">
+<link rel="icon" type="image/png" href="/assets/logo.png">
+<link rel="stylesheet" href="/style.css">
 </head>
 <body>
+
+<header>
+    <div class="logo"><img src="/assets/logo.png" alt="NovaStrike"></div>
+</header>
 
 <nav>
 <a href="/">Home</a>
@@ -14,14 +20,12 @@
 <a href="/support/">Support</a>
 </nav>
 
-<div class="hero">
-<h1>About NovaStrike</h1>
-</div>
-
+<main>
+<div class="hero"><h1>About NovaStrike</h1></div>
 <div class="card">
-<p>NovaStrike builds powerful Discord bots and professional websites for our clients.</p>
+<p>NovaStrike builds powerful Discord bots and professional websites for clients worldwide.</p>
 </div>
-
 <footer>© 2026 NovaStrike</footer>
+<script src="/script.js"></script>
 </body>
 </html>
