--- a/support/index.html
+++ b/support/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>NovaStrike - Support</title>
-<link rel="stylesheet" href="/assets/style.css">
+<link rel="icon" type="image/png" href="/assets/logo.png">
+<link rel="stylesheet" href="/style.css">
 </head>
 <body>
+
+<header>
+    <div class="logo"><img src="/assets/logo.png" alt="NovaStrike"></div>
+</header>
 
 <nav>
 <a href="/">Home</a>
@@ -14,10 +20,8 @@
 <a href="/support/" class="active">Support</a>
 </nav>
 
-<div class="hero">
-<h1>Support</h1>
-</div>
-
+<main>
+<div class="hero"><h1>Support</h1></div>
 <div class="card">
 <input id="name" placeholder="Your Name"><br>
 <textarea id="message" placeholder="Your Issue"></textarea><br>
@@ -26,6 +30,7 @@
 
 <footer>© 2026 NovaStrike</footer>
 
+<script src="/script.js"></script>
 <script>
 // Support form logic
 document.getElementById("sendBtn").addEventListener("click", ()=>{
@@ -37,6 +42,5 @@ document.getElementById("sendBtn").addEventListener("click", ()=>{
     document.getElementById("message").value="";
 });
 </script>
-
 </body>
 </html>
