--- a/plans/index.html
+++ b/plans/index.html
@@ -2,34 +2,70 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>NovaStrike - Plans</title>
-<link rel="icon" type="image/png" href="/assets/logo.png">
-<link rel="stylesheet" href="/style.css">
+<title>TitanPulse - Bot Plans</title>
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
 <header>
-    <div class="logo"><img src="/assets/logo.png" alt="NovaStrike"></div>
+    <div class="logo">
+        <h2>TitanPulse</h2>
+    </div>
 </header>
 
 <nav>
-<a href="/">Home</a>
-<a href="/plans/" class="active">Plans</a>
-<a href="/about/">About Us</a>
-<a href="/support/">Support</a>
+    <a href="../">Home</a>
+    <a href="./" class="active">Plans</a>
+    <a href="../about/">About</a>
+    <a href="../support/">Support</a>
 </nav>
 
-<main>
-<div class="hero"><h1>Our Plans</h1></div>
-
-<div class="card">
-<button data-page="/plans/">Starter Plan</button>
-<button data-page="/plans/">Pro Plan</button>
-<button data-page="/plans/">Enterprise Plan</button>
+<div class="hero">
+    <h1>Discord Bot Plans</h1>
+    <p>Choose your TitanPulse package</p>
 </div>
 
-<footer>© 2026 NovaStrike</footer>
-<script src="/script.js"></script>
+<div class="card">
+
+    <div class="plan">
+        <h2>Starter Plan</h2>
+        <p><b>Bots:</b> 1</p>
+        <p><b>Commands:</b> 0</p>
+        <p><b>Use:</b> Autoroll or simple automation</p>
+        <p><b>Price:</b> €5 one-time + €1/month</p>
+        <button>Order Starter</button>
+    </div>
+
+    <div class="plan">
+        <h2>Basic Plan</h2>
+        <p><b>Bots:</b> 1</p>
+        <p><b>Commands:</b> Up to 5</p>
+        <p><b>Use:</b> Small utility or moderation</p>
+        <p><b>Price:</b> €10 one-time + €2/month</p>
+        <button>Order Basic</button>
+    </div>
+
+    <div class="plan">
+        <h2>Pro Plan</h2>
+        <p><b>Bots:</b> 2</p>
+        <p><b>Commands:</b> Up to 15</p>
+        <p><b>Use:</b> Moderation, tickets, games</p>
+        <p><b>Price:</b> €20 one-time + €3/month</p>
+        <button>Order Pro</button>
+    </div>
+
+    <div class="plan">
+        <h2>Ultimate Plan</h2>
+        <p><b>Bots:</b> 3</p>
+        <p><b>Commands:</b> Up to 30</p>
+        <p><b>Use:</b> Moderation, games, economy, buttons</p>
+        <p><b>Price:</b> €35 one-time + €4/month</p>
+        <button>Order Ultimate</button>
+    </div>
+
+</div>
+
+<footer>© TitanPulse</footer>
+
 </body>
 </html>
