--- a/index.html
+++ b/index.html
@@ -2,34 +2,56 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<title>TitanPulse</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>NovaStrike</title>
-<link rel="icon" type="image/png" href="/assets/logo.png">
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-    <div class="logo"><img src="/assets/logo.png" alt="NovaStrike"></div>
+    <div class="logo">
+        <h2>TitanPulse</h2>
+    </div>
 </header>
 
 <nav>
-<a href="/" class="active">Home</a>
-<a href="/plans/">Plans</a>
-<a href="/about/">About Us</a>
-<a href="/support/">Support</a>
+    <a href="./" class="active">Home</a>
+    <a href="plans/">Plans</a>
+    <a href="about/">About</a>
+    <a href="support/">Support</a>
 </nav>
 
-<main class="landing">
-    <div class="hero">
-        <h1>Welcome to <span style="color:red">NovaStrike</span></h1>
-        <p>The ultimate Discord bots & web hosting platform.</p>
-        <a class="cta-btn" href="/plans/">View Plans</a>
-        <p id="system-status">Loading status...</p>
-    </div>
-</main>
+<div class="hero">
+    <h1>Powerful Discord Bots.<br>Built for Performance.</h1>
+    <p>
+        TitanPulse creates and hosts custom Discord bots and web systems.
+        From moderation to full automation — we build what your server needs.
+    </p>
 
-<footer>© 2026 NovaStrike</footer>
-<script src="/script.js"></script>
+    <a class="cta-btn" href="plans/">View Plans</a>
+</div>
+
+<div class="card">
+    <h2>What We Do</h2>
+    <p>
+        TitanPulse specializes in Discord bot development, hosting and web solutions.
+        We focus on performance, security and reliability for communities of all sizes.
+    </p>
+</div>
+
+<div class="card">
+    <h2>Why TitanPulse?</h2>
+    <ul>
+        <li>Custom coded Discord bots</li>
+        <li>Fast & secure hosting</li>
+        <li>Professional support</li>
+        <li>Scalable systems for growing servers</li>
+    </ul>
+</div>
+
+<footer>
+    © TitanPulse
+</footer>
+
 </body>
 </html>
