--- a/about/index.html
+++ b/about/index.html
@@ -2,30 +2,75 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<title>About - TitanPulse</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>NovaStrike - About Us</title>
-<link rel="icon" type="image/png" href="/assets/logo.png">
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
 <header>
-    <div class="logo"><img src="/assets/logo.png" alt="NovaStrike"></div>
+    <div class="logo">
+        <h2>TitanPulse</h2>
+    </div>
 </header>
 
 <nav>
-<a href="/">Home</a>
-<a href="/plans/">Plans</a>
-<a href="/about/" class="active">About Us</a>
-<a href="/support/">Support</a>
+    <a href="../">Home</a>
+    <a href="../plans/">Plans</a>
+    <a href="./" class="active">About</a>
+    <a href="../support/">Support</a>
 </nav>
 
-<main>
-<div class="hero"><h1>About NovaStrike</h1></div>
-<div class="card">
-<p>NovaStrike builds powerful Discord bots and professional websites for clients worldwide.</p>
+<div class="hero">
+    <h1>About TitanPulse</h1>
+    <p>Built for power. Designed for performance.</p>
 </div>
-<footer>© 2026 NovaStrike</footer>
-<script src="/script.js"></script>
+
+<div class="card">
+    <h2>Who We Are</h2>
+    <p>
+        TitanPulse is a high-performance Discord bot and web hosting company focused on reliability,
+        scalability and quality. We build custom systems designed to help communities grow and stay organized.
+    </p>
+
+    <p>
+        From simple automation to advanced moderation, economy systems, ticket bots and interactive features,
+        we create tools that bring real value to your Discord server.
+    </p>
+</div>
+
+<div class="card">
+    <h2>What We Do</h2>
+    <p>
+        We design, develop and host custom Discord bots and web services.
+        Unlike generic bot providers, TitanPulse builds everything with performance and security in mind.
+    </p>
+
+    <ul>
+        <li>Custom Discord bot development</li>
+        <li>Fast and secure hosting</li>
+        <li>Web dashboards and tools</li>
+        <li>Scalable infrastructure</li>
+        <li>Professional support</li>
+    </ul>
+</div>
+
+<div class="card">
+    <h2>Our Vision</h2>
+    <p>
+        TitanPulse was created to give Discord communities access to professional-grade systems without the high cost.
+        We believe that every server — small or large — deserves reliable, powerful and easy-to-use tools.
+    </p>
+
+    <p>
+        Our goal is to become one of the most trusted names in Discord automation and hosting.
+        We are constantly improving our systems, adding new features and optimizing performance.
+    </p>
+</div>
+
+<footer>
+    © TitanPulse
+</footer>
+
 </body>
 </html>
