--- a/index.html
+++ b/index.html
@@ -1,57 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
 <title>TitanPulse</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-    <div class="logo">
-        <h2>TitanPulse</h2>
-    </div>
-</header>
+<header><h2>TitanPulse</h2></header>
 
 <nav>
-    <a href="./" class="active">Home</a>
-    <a href="plans/">Plans</a>
-    <a href="about/">About</a>
-    <a href="support/">Support</a>
+<a class="active" href="/">Home</a>
+<a href="plans/">Plans</a>
+<a href="about/">About</a>
+<a href="support/">Support</a>
 </nav>
 
 <div class="hero">
-    <h1>Powerful Discord Bots.<br>Built for Performance.</h1>
-    <p>
-        TitanPulse creates and hosts custom Discord bots and web systems.
-        From moderation to full automation — we build what your server needs.
-    </p>
-
-    <a class="cta-btn" href="plans/">View Plans</a>
+<h1>Powerful Discord Bots</h1>
+<p>High-performance Discord bots and hosting for modern communities.</p>
+<div style="margin-top:40px;">
+<a class="cta-btn" href="plans/">View Plans</a>
+</div>
 </div>
 
 <div class="card">
-    <h2>What We Do</h2>
-    <p>
-        TitanPulse specializes in Discord bot development, hosting and web solutions.
-        We focus on performance, security and reliability for communities of all sizes.
-    </p>
+<h2>What We Do</h2>
+<p>TitanPulse builds, hosts and maintains custom Discord bots and web services. From moderation to economy systems, we create scalable, secure solutions.</p>
 </div>
 
 <div class="card">
-    <h2>Why TitanPulse?</h2>
-    <ul>
-        <li>Custom coded Discord bots</li>
-        <li>Fast & secure hosting</li>
-        <li>Professional support</li>
-        <li>Scalable systems for growing servers</li>
-    </ul>
+<h2>Why TitanPulse?</h2>
+<ul>
+<li>Custom bot development</li>
+<li>Fast & reliable hosting</li>
+<li>Professional support</li>
+<li>Built for growing servers</li>
+</ul>
 </div>
 
-<footer>
-    © TitanPulse
-</footer>
-
+<footer>© TitanPulse</footer>
 </body>
 </html>
