--- a/plans/index.html
+++ b/plans/index.html
@@ -1,71 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>TitanPulse - Bot Plans</title>
+<title>TitanPulse Plans</title>
 <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-<header>
-    <div class="logo">
-        <h2>TitanPulse</h2>
-    </div>
-</header>
+<header><h2>TitanPulse</h2></header>
 
 <nav>
-    <a href="../">Home</a>
-    <a href="./" class="active">Plans</a>
-    <a href="../about/">About</a>
-    <a href="../support/">Support</a>
+<a href="../">Home</a>
+<a class="active" href="./">Plans</a>
+<a href="../about/">About</a>
+<a href="../support/">Support</a>
 </nav>
 
-<div class="hero">
-    <h1>Discord Bot Plans</h1>
-    <p>Choose your TitanPulse package</p>
-</div>
+<div class="hero"><h1>Discord Bot Plans</h1></div>
 
 <div class="card">
 
-    <div class="plan">
-        <h2>Starter Plan</h2>
-        <p><b>Bots:</b> 1</p>
-        <p><b>Commands:</b> 0</p>
-        <p><b>Use:</b> Autoroll or simple automation</p>
-        <p><b>Price:</b> €5 one-time + €1/month</p>
-        <button>Order Starter</button>
-    </div>
+<div class="plan">
+<h2>Starter</h2>
+<p>1 Bot – 0 Commands</p>
+<p>€5 setup + €1/month</p>
+<a href="https://discord.com/channels/1470861044325941331/1470876394652303412" target="_blank"><button>Order Plan</button></a>
+</div>
 
-    <div class="plan">
-        <h2>Basic Plan</h2>
-        <p><b>Bots:</b> 1</p>
-        <p><b>Commands:</b> Up to 5</p>
-        <p><b>Use:</b> Small utility or moderation</p>
-        <p><b>Price:</b> €10 one-time + €2/month</p>
-        <button>Order Basic</button>
-    </div>
+<div class="plan">
+<h2>Basic</h2>
+<p>1 Bot – 5 Commands</p>
+<p>€10 setup + €2/month</p>
+<a href="https://discord.com/channels/1470861044325941331/1470876394652303412" target="_blank"><button>Order Plan</button></a>
+</div>
 
-    <div class="plan">
-        <h2>Pro Plan</h2>
-        <p><b>Bots:</b> 2</p>
-        <p><b>Commands:</b> Up to 15</p>
-        <p><b>Use:</b> Moderation, tickets, games</p>
-        <p><b>Price:</b> €20 one-time + €3/month</p>
-        <button>Order Pro</button>
-    </div>
+<div class="plan">
+<h2>Pro</h2>
+<p>2 Bots – 15 Commands</p>
+<p>€20 setup + €3/month</p>
+<a href="https://discord.com/channels/1470861044325941331/1470876394652303412" target="_blank"><button>Order Plan</button></a>
+</div>
 
-    <div class="plan">
-        <h2>Ultimate Plan</h2>
-        <p><b>Bots:</b> 3</p>
-        <p><b>Commands:</b> Up to 30</p>
-        <p><b>Use:</b> Moderation, games, economy, buttons</p>
-        <p><b>Price:</b> €35 one-time + €4/month</p>
-        <button>Order Ultimate</button>
-    </div>
+<div class="plan">
+<h2>Ultimate</h2>
+<p>3 Bots – 30 Commands</p>
+<p>€35 setup + €4/month</p>
+<a href="https://discord.com/channels/1470861044325941331/1470876394652303412" target="_blank"><button>Order Plan</button></a>
+</div>
 
 </div>
 
 <footer>© TitanPulse</footer>
-
 </body>
 </html>
