--- a/plans/index.html
+++ b/plans/index.html
@@ -17,8 +17,7 @@
 
 <div class="hero"><h1>Discord Bot Plans</h1></div>
 
-<div class="card">
-
+<!-- individuele plannen zonder lange rode balk -->
 <div class="plan">
 <h2>Starter</h2>
 <p>1 Bot – 0 Commands</p>
@@ -45,8 +44,6 @@
 <p>3 Bots – 30 Commands</p>
 <p>€35 setup + €4/month</p>
 <a href="https://discord.com/channels/1470861044325941331/1470876394652303412" target="_blank"><button>Order Plan</button></a>
-</div>
-
 </div>
 
 <footer>© TitanPulse</footer>
