--- a/about/index.html
+++ b/about/index.html
@@ -8,69 +8,44 @@
 </head>
 <body>
 
-<header>
-    <div class="logo">
-        <h2>TitanPulse</h2>
-    </div>
-</header>
+<header><h2>TitanPulse</h2></header>
 
 <nav>
-    <a href="../">Home</a>
-    <a href="../plans/">Plans</a>
-    <a href="./" class="active">About</a>
-    <a href="../support/">Support</a>
+<a href="../">Home</a>
+<a href="../plans/">Plans</a>
+<a href="./" class="active">About</a>
+<a href="../support/">Support</a>
 </nav>
 
 <div class="hero">
-    <h1>About TitanPulse</h1>
-    <p>Built for power. Designed for performance.</p>
+<h1>About TitanPulse</h1>
+<p>Built for power. Designed for performance.</p>
 </div>
 
 <div class="card">
-    <h2>Who We Are</h2>
-    <p>
-        TitanPulse is a high-performance Discord bot and web hosting company focused on reliability,
-        scalability and quality. We build custom systems designed to help communities grow and stay organized.
-    </p>
-
-    <p>
-        From simple automation to advanced moderation, economy systems, ticket bots and interactive features,
-        we create tools that bring real value to your Discord server.
-    </p>
+<h2>Who We Are</h2>
+<p>TitanPulse is a high-performance Discord bot and web hosting company focused on reliability, scalability and quality. We build custom systems designed to help communities grow and stay organized.</p>
+<p>From simple automation to advanced moderation, economy systems, ticket bots and interactive features, we create tools that bring real value to your Discord server.</p>
 </div>
 
 <div class="card">
-    <h2>What We Do</h2>
-    <p>
-        We design, develop and host custom Discord bots and web services.
-        Unlike generic bot providers, TitanPulse builds everything with performance and security in mind.
-    </p>
-
-    <ul>
-        <li>Custom Discord bot development</li>
-        <li>Fast and secure hosting</li>
-        <li>Web dashboards and tools</li>
-        <li>Scalable infrastructure</li>
-        <li>Professional support</li>
-    </ul>
+<h2>What We Do</h2>
+<p>We design, develop and host custom Discord bots and web services. Unlike generic bot providers, TitanPulse builds everything with performance and security in mind.</p>
+<ul>
+<li>Custom Discord bot development</li>
+<li>Fast and secure hosting</li>
+<li>Web dashboards and tools</li>
+<li>Scalable infrastructure</li>
+<li>Professional support</li>
+</ul>
 </div>
 
 <div class="card">
-    <h2>Our Vision</h2>
-    <p>
-        TitanPulse was created to give Discord communities access to professional-grade systems without the high cost.
-        We believe that every server — small or large — deserves reliable, powerful and easy-to-use tools.
-    </p>
-
-    <p>
-        Our goal is to become one of the most trusted names in Discord automation and hosting.
-        We are constantly improving our systems, adding new features and optimizing performance.
-    </p>
+<h2>Our Vision</h2>
+<p>TitanPulse was created to give Discord communities access to professional-grade systems without the high cost. We believe that every server deserves reliable, powerful and easy-to-use tools.</p>
+<p>Our goal is to become one of the most trusted names in Discord automation and hosting. We constantly improve our systems, adding new features and optimizing performance.</p>
 </div>
 
-<footer>
-    © TitanPulse
-</footer>
-
+<footer>© TitanPulse</footer>
 </body>
 </html>
