--- a/support/index.html
+++ b/support/index.html
@@ -8,51 +8,32 @@
 </head>
 <body>
 
-<header>
-    <div class="logo">
-        <h2>TitanPulse</h2>
-    </div>
-</header>
+<header><h2>TitanPulse</h2></header>
 
 <nav>
-    <a href="../">Home</a>
-    <a href="../plans/">Plans</a>
-    <a href="../about/">About</a>
-    <a href="./" class="active">Support</a>
+<a href="../">Home</a>
+<a href="../plans/">Plans</a>
+<a href="../about/">About</a>
+<a href="./" class="active">Support</a>
 </nav>
 
 <div class="hero">
-    <h1>Support Center</h1>
-    <p>Need help? Open a support ticket instantly.</p>
+<h1>Support Center</h1>
+<p>Need help? Open a support ticket instantly.</p>
 </div>
 
 <div class="card">
-    <h2>Open a Ticket</h2>
-    <p>
-        Click the button below to open a private support ticket in our Discord server.
-        Our team will assist you as soon as possible.
-    </p>
-
-    <a href="https://discord.com/channels/1470861044325941331/1470876394652303412" target="_blank">
-        <button>Open Support Ticket</button>
-    </a>
+<h2>Open a Ticket</h2>
+<p>Click below to open a private support ticket in our Discord server.</p>
+<a href="https://discord.com/channels/1470861044325941331/1470876394652303412" target="_blank"><button>Open Support Ticket</button></a>
 </div>
 
 <div class="card">
-    <h2>Why Discord Support?</h2>
-    <p>
-        Using Discord allows us to provide faster responses, live chat, file sharing,
-        and real-time updates about your bot or service.
-    </p>
-
-    <p>
-        All tickets are handled by our TitanPulse support team and tracked for quality and speed.
-    </p>
+<h2>Why Discord Support?</h2>
+<p>Using Discord allows us to provide faster responses, live chat, file sharing, and real-time updates about your bot or service.</p>
+<p>All tickets are handled by our TitanPulse support team and tracked for quality and speed.</p>
 </div>
 
-<footer>
-    © TitanPulse
-</footer>
-
+<footer>© TitanPulse</footer>
 </body>
 </html>
