--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 <title>TitanPulse</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
+
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
 
-<header><h2>TitanPulse</h2></header>
+<header>
+    <div class="logo">
+        <img src="assets/logo.png" alt="TitanPulse Logo" height="50">
+    </div>
+</header>
 
 <nav>
 <a class="active" href="/">Home</a>
