--- a/plans/index.html
+++ b/plans/index.html
@@ -3,10 +3,15 @@
 <head>
 <title>TitanPulse Plans</title>
 <link rel="stylesheet" href="../style.css">
+<link rel="icon" type="image/png" href="../favicon.png">
 </head>
 <body>
 
-<header><h2>TitanPulse</h2></header>
+<header>
+    <div class="logo">
+        <img src="../assets/logo.png" alt="TitanPulse Logo" height="50">
+    </div>
+</header>
 
 <nav>
 <a href="../">Home</a>
