--- a/about/index.html
+++ b/about/index.html
@@ -5,10 +5,15 @@
 <title>About - TitanPulse</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="../style.css">
+<link rel="icon" type="image/png" href="../favicon.png">
 </head>
 <body>
 
-<header><h2>TitanPulse</h2></header>
+<header>
+    <div class="logo">
+        <img src="../assets/logo.png" alt="TitanPulse Logo" height="50">
+    </div>
+</header>
 
 <nav>
 <a href="../">Home</a>
