--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <header>
     <div class="logo">
-        <img src="assets/logo.png" alt="TitanPulse Logo" height="50">
+        <img src="assets/logo.png" alt="TitanPulse Logo">
+        <h2>TitanPulse</h2>
     </div>
 </header>
 
