--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>TitanPulse</title>
+<title>TITANPULSE</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
-
-<!-- Favicon -->
 <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
@@ -13,7 +11,7 @@
 <header>
     <div class="logo">
         <img src="assets/logo.png" alt="TitanPulse Logo">
-        <h2>TitanPulse</h2>
+        <h2>TITANPULSE</h2>
     </div>
 </header>
 
@@ -47,6 +45,6 @@
 </ul>
 </div>
 
-<footer>© TitanPulse</footer>
+<footer>© TITANPULSE</footer>
 </body>
 </html>
