--- a/plans/index.html
+++ b/plans/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>TitanPulse Plans</title>
+<title>TITANPULSE Plans</title>
 <link rel="stylesheet" href="../style.css">
 <link rel="icon" type="image/png" href="../favicon.png">
 </head>
@@ -9,7 +9,8 @@
 
 <header>
     <div class="logo">
-        <img src="../assets/logo.png" alt="TitanPulse Logo" height="50">
+        <img src="../assets/logo.png" alt="TitanPulse Logo">
+        <h2>TITANPULSE</h2>
     </div>
 </header>
 
@@ -50,6 +51,6 @@
 <a href="https://discord.com/channels/1470861044325941331/1470876394652303412" target="_blank"><button>Order Plan</button></a>
 </div>
 
-<footer>© TitanPulse</footer>
+<footer>© TITANPULSE</footer>
 </body>
 </html>
