--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>About - TitanPulse</title>
+<title>About - TITANPULSE</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="../style.css">
 <link rel="icon" type="image/png" href="../favicon.png">
@@ -11,7 +11,8 @@
 
 <header>
     <div class="logo">
-        <img src="../assets/logo.png" alt="TitanPulse Logo" height="50">
+        <img src="../assets/logo.png" alt="TitanPulse Logo">
+        <h2>TITANPULSE</h2>
     </div>
 </header>
 
@@ -23,7 +24,7 @@
 </nav>
 
 <div class="hero">
-<h1>About TitanPulse</h1>
+<h1>About TITANPULSE</h1>
 <p>Built for power. Designed for performance.</p>
 </div>
 
@@ -51,6 +52,6 @@
 <p>Our goal is to become one of the most trusted names in Discord automation and hosting. We constantly improve our systems, adding new features and optimizing performance.</p>
 </div>
 
-<footer>© TitanPulse</footer>
+<footer>© TITANPULSE</footer>
 </body>
 </html>
