--- a/support/index.html
+++ b/support/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Support - TitanPulse</title>
+<title>Support - TITANPULSE</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="../style.css">
 <link rel="icon" type="image/png" href="../favicon.png">
@@ -11,7 +11,8 @@
 
 <header>
     <div class="logo">
-        <img src="../assets/logo.png" alt="TitanPulse Logo" height="50">
+        <img src="../assets/logo.png" alt="TitanPulse Logo">
+        <h2>TITANPULSE</h2>
     </div>
 </header>
 
@@ -39,6 +40,6 @@
 <p>All tickets are handled by our TitanPulse support team and tracked for quality and speed.</p>
 </div>
 
-<footer>© TitanPulse</footer>
+<footer>© TITANPULSE</footer>
 </body>
 </html>
