--- a/plans/index.html
+++ b/plans/index.html
@@ -12,17 +12,17 @@
         <img src="../assets/logo.png" alt="TitanPulse Logo">
         <h2>TITANPULSE</h2>
     </div>
+    <nav>
+        <a href="../">Home</a>
+        <a class="active" href="./">Plans</a>
+        <a href="../about/">About</a>
+        <a href="../support/">Support</a>
+    </nav>
 </header>
-
-<nav>
-<a href="../">Home</a>
-<a class="active" href="./">Plans</a>
-<a href="../about/">About</a>
-<a href="../support/">Support</a>
-</nav>
 
 <div class="hero"><h1>Discord Bot Plans</h1></div>
 
+<!-- BOT PLANS -->
 <div class="plan">
 <h2>Starter</h2>
 <p>1 Bot – 0 Commands</p>
@@ -49,6 +49,91 @@
 <p>3 Bots – 30 Commands</p>
 <p>€35 setup + €4/month</p>
 <a href="https://discord.com/channels/1470861044325941331/1470876394652303412" target="_blank"><button>Order Plan</button></a>
+</div>
+
+<!-- WEBSITE PLANS -->
+<div class="hero"><h1>Website Plans</h1></div>
+
+<div class="plan">
+<h2>Starter Plan</h2>
+<p>Websites: 1</p>
+<p>Pages: 1–3 pages</p>
+<p>Email: Optional (see mail prices)</p>
+<p>Custom Domain: Optional (see domain prices)</p>
+<p>Use: Ideal for simple portfolios or one-page websites</p>
+<p>Price: €5 one-time + €1/month</p>
+</div>
+
+<div class="plan">
+<h2>Basic Plan</h2>
+<p>Websites: 1</p>
+<p>Pages: Up to 5 pages</p>
+<p>Email: Optional (see mail prices)</p>
+<p>Custom Domain: Optional (see domain prices)</p>
+<p>Use: Small business sites or personal blogs</p>
+<p>Price: €10 one-time + €2/month</p>
+</div>
+
+<div class="plan">
+<h2>Pro Plan</h2>
+<p>Websites: 1</p>
+<p>Pages: Up to 15 pages</p>
+<p>Email: Optional (see mail prices)</p>
+<p>Custom Domain: Optional (see domain prices)</p>
+<p>Use: Full business websites, portfolios, or small online stores</p>
+<p>Price: €20 one-time + €3/month</p>
+</div>
+
+<div class="plan">
+<h2>Ultimate Plan</h2>
+<p>Websites: 1</p>
+<p>Pages: Unlimited</p>
+<p>Email: Optional (see mail prices)</p>
+<p>Custom Domain: Optional (see domain prices)</p>
+<p>Use: Complete online presence: business website, webshop, blogs, all-in-one</p>
+<p>Price: €35 one-time + €4/month</p>
+</div>
+
+<!-- CUSTOM DOMAIN PRICES -->
+<div class="hero"><h1>Custom Domain Prices</h1></div>
+
+<div class="plan">
+<p>.nl → €7.50/year</p>
+<p>.com → €15/year</p>
+<p>.org → €15/year</p>
+<p>.info → €33/year</p>
+<p>.shop → €40/year</p>
+<p>.tech → €9/year</p>
+<p>.pro → €6/year</p>
+<p>.online → €6/year</p>
+<p>.store → €6/year</p>
+<p>.eu → €6/year</p>
+<p>.site → €6/year</p>
+<p>.fun → €4/year</p>
+<p>.life → €4/year</p>
+</div>
+
+<!-- EMAIL PLANS -->
+<div class="hero"><h1>Email Plans</h1></div>
+
+<div class="plan">
+<h2>Basic Mail Plan</h2>
+<p>Mailboxes: 25</p>
+<p>Storage: 2 GB per mailbox</p>
+<p>Access: IMAP/POP3, accessible from all devices</p>
+<p>Extras: Ad-free, optional mail archiving</p>
+<p>Price: €4.00/month</p>
+<p>Setup Fee: €5 one-time</p>
+</div>
+
+<div class="plan">
+<h2>Plus Mail Plan</h2>
+<p>Mailboxes: 25</p>
+<p>Storage: 5 GB per mailbox</p>
+<p>Access: IMAP/POP3, accessible from all devices</p>
+<p>Extras: Ad-free, optional mail archiving</p>
+<p>Price: €5.00/month</p>
+<p>Setup Fee: €5 one-time</p>
 </div>
 
 <footer>© TITANPULSE</footer>
