--- a/plans/index.html
+++ b/plans/index.html
@@ -8,16 +8,18 @@
 <body>
 
 <header>
-    <div class="logo">
-        <img src="../assets/logo.png" alt="TitanPulse Logo">
-        <h2>TITANPULSE</h2>
+    <div class="header-container">
+        <div class="logo">
+            <img src="../assets/logo.png" alt="TitanPulse Logo">
+            <h2>TITANPULSE</h2>
+        </div>
+        <nav>
+            <a href="../">Home</a>
+            <a class="active" href="./">Plans</a>
+            <a href="../about/">About</a>
+            <a href="../support/">Support</a>
+        </nav>
     </div>
-    <nav>
-        <a href="../">Home</a>
-        <a class="active" href="./">Plans</a>
-        <a href="../about/">About</a>
-        <a href="../support/">Support</a>
-    </nav>
 </header>
 
 <!-- HERO -->
@@ -63,6 +65,7 @@
 <p>Custom Domain: Optional (see domain prices)</p>
 <p>Use: Ideal for simple portfolios or one-page websites</p>
 <p>Price: €5 one-time + €1/month</p>
+<a href="https://discord.com/channels/1470861044325941331/1470876394652303412" target="_blank"><button>Order Plan</button></a>
 </div>
 
 <div class="plan">
@@ -73,6 +76,7 @@
 <p>Custom Domain: Optional (see domain prices)</p>
 <p>Use: Small business sites or personal blogs</p>
 <p>Price: €10 one-time + €2/month</p>
+<a href="https://discord.com/channels/1470861044325941331/1470876394652303412" target="_blank"><button>Order Plan</button></a>
 </div>
 
 <div class="plan">
@@ -83,6 +87,7 @@
 <p>Custom Domain: Optional (see domain prices)</p>
 <p>Use: Full business websites, portfolios, or small online stores</p>
 <p>Price: €20 one-time + €3/month</p>
+<a href="https://discord.com/channels/1470861044325941331/1470876394652303412" target="_blank"><button>Order Plan</button></a>
 </div>
 
 <div class="plan">
@@ -93,6 +98,7 @@
 <p>Custom Domain: Optional (see domain prices)</p>
 <p>Use: Complete online presence: business website, webshop, blogs, all-in-one</p>
 <p>Price: €35 one-time + €4/month</p>
+<a href="https://discord.com/channels/1470861044325941331/1470876394652303412" target="_blank"><button>Order Plan</button></a>
 </div>
 
 <!-- CUSTOM DOMAIN PRICES -->
@@ -125,6 +131,7 @@
 <p>Extras: Ad-free, optional mail archiving</p>
 <p>Price: €4.00/month</p>
 <p>Setup Fee: €5 one-time</p>
+<a href="https://discord.com/channels/1470861044325941331/1470876394652303412" target="_blank"><button>Order Plan</button></a>
 </div>
 
 <div class="plan">
@@ -135,6 +142,7 @@
 <p>Extras: Ad-free, optional mail archiving</p>
 <p>Price: €5.00/month</p>
 <p>Setup Fee: €5 one-time</p>
+<a href="https://discord.com/channels/1470861044325941331/1470876394652303412" target="_blank"><button>Order Plan</button></a>
 </div>
 
 <footer>© TITANPULSE</footer>
