--- a/plans/index.html
+++ b/plans/index.html
@@ -12,13 +12,14 @@
         <img src="../assets/logo.png" alt="TitanPulse Logo">
         <h2>TITANPULSE</h2>
     </div>
-    <nav>
-        <a href="../">Home</a>
-        <a class="active" href="./">Plans</a>
-        <a href="../about/">About</a>
-        <a href="../support/">Support</a>
-    </nav>
 </header>
+
+<nav>
+<a href="../">Home</a>
+<a href="../plans/">Plans</a>
+<a href="../about/">About</a>
+<a href="./" class="active">Support</a>
+</nav>
 
 
 <!-- HERO -->
