--- a/plans/index.html
+++ b/plans/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>TITANPULSE Plans</title>
+<meta charset="UTF-8">
+<title>Plans - TITANPULSE</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="../style.css">
 <link rel="icon" type="image/png" href="../favicon.png">
 </head>
@@ -13,13 +15,6 @@
         <h2>TITANPULSE</h2>
     </div>
 </header>
-
-<nav>
-<a href="../">Home</a>
-<a href="../plans/">Plans</a>
-<a href="../about/">About</a>
-<a href="./" class="active">Support</a>
-</nav>
 
 
 <!-- HERO -->
