--- a/plans/index.html
+++ b/plans/index.html
@@ -16,7 +16,13 @@
     </div>
 </header>
 
-
+<nav>
+<a href="../">Home</a>
+<a href="../plans/">Plans</a>
+<a href="../about/">About</a>
+<a href="./" class="active">Support</a>
+</nav>
+    
 <!-- HERO -->
 <div class="hero"><h1>Discord Bot Plans</h1></div>
 <div class="plan">
