--- a/plans/index.html
+++ b/plans/index.html
@@ -18,9 +18,9 @@
 
 <nav>
 <a href="../">Home</a>
-<a href="../plans/">Plans</a>
+<a href="../plans/" class="active">Plans</a>
 <a href="../about/">About</a>
-<a href="./" class="active">Support</a>
+<a href="./">Support</a>
 </nav>
     
 <!-- HERO -->
