--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </nav>
 
 <div class="hero">
-<h1>Powerful Discord Bots</h1>
+<h1>Powerful Discord Bots & Websites</h1>
 <p>High-performance Discord bots and hosting for modern communities.</p>
 <div style="margin-top:40px;">
 <a class="cta-btn" href="plans/">View Plans</a>
